--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Bio</h1>
-    <img src="IMG_6642.JPG" alt="Picture of Jonathan">
+    <img src="IMG_6642.JPG" alt="Picture of Jonathan" style="width:300px">
     <p>Jonathan teaches in the NYU <strong>MIAP</strong> program.<a href="https://www.farbowitz.com">His personal page</a> is very out of date.</p>
   </body>
 </html>
