Made image bigger, made title all caps

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>Jonathan's Personal Page</title>
+    <title>JONATHAN'S PERSONAL PAGE</title>
   </head>
   <body>
     <h1>Bio</h1>
-    <img src="IMG_6642.JPG" alt="Picture of Jonathan" style="width:300px">
+    <img src="IMG_6642.JPG" alt="Picture of Jonathan" style="width:400px">
     <p>Jonathan teaches in the NYU <strong>MIAP</strong> program.<a href="https://www.farbowitz.com">His personal page</a> is very out of date.</p>
   </body>
 </html>
