Update index.html -- added Korean

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Bio</h1>
     <img src="IMG_6642.JPG" alt="Picture of Jonathan" style="width:400px">
     <p>Jonathan teaches in the NYU <strong>MIAP</strong> program.<a href="https://www.farbowitz.com">His personal page</a> is very out of date.</p>
+    <p>He likes 간장.</p>
   </body>
 </html>
