Update index.html - added met job

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <img src="IMG_6642.JPG" alt="Picture of Jonathan" style="width:400px">
     <p>Jonathan teaches in the NYU <strong>MIAP</strong> program.<a href="https://www.farbowitz.com">His personal page</a> is very out of date.</p>
     <p>He likes 간장.</p>
+    <p>He works at The Met</p>
   </body>
 </html>
